# bandcamp-collection-downloader

./: config.ini  pyproject.toml
src/: config.py  main.py
