[tool.poetry]
name = "rekordbox-automation"
version = "0.0.1"
description = ""
authors = ["Aaron Mamparo <aaronmamparo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mutagen = "^1.47.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
tqdm = "^4.66.1"
configparser = "^6.0.0"
requests = "^2.31.0"
selenium = "^4.16.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
